typescript/checker/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings24_ES6.ts.stderr
error: Invalid unciode escape
 --> $DIR/tests/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings24_ES6.ts:3:10
  |
3 | var x = "\u{00000000000067
  |          ^^^^^^^^^^^^^^^^^

